# mcp-research

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
import/: Activity from MCP as an integration backbone for enterprise and government AI  Citations from MCP as an integration backbone for enterprise and government AI  MCP as an integration backbone for enterprise and government AI.md  README.md
latex/: main.tex  preamble.tex  references.bib
paper/: 00-executive-summary.md  01-introduction-methodology.md  02-mcp-in-a-nutshell.md  03-perceptions-and-discourse.md  04-technical-critiques-and-mitigations.md  05-timeline-and-evolution.md  06-mcp-vs-alternatives.md  07-hype-vs-substance.md  08-deeper-analyses-and-case-studies.md  09-government-local-authority-ai-hub.md  10-open-questions-and-future-directions.md  11-glossary.md
postmortem-public/: AGENTS.md
postmortem-public/wiki/: conversation-summary.md  decisions.md  index.md  methodology.md  postmortem.md  publication.md  repository-evidence.md  surrogate-catalogue.md  (+1 more)
reports/: mcp_research_codex_project_summary_2026-04-29.json  mcp_research_codex_project_summary_2026-04-29.md
scripts/: build.sh  build_postmortem_wiki.py  check_citations.py  check_links.py  check_postmortem_public.py  codex_project_summary.py  validate_wiki_state.py
sources/: alternatives-skills-agents.md  discourse-and-criticism.md  fastmcp.md  official-specs.md  security-research.md  source-register.md  vendor-adoption.md
wiki/: AGENTS.md  index.md  wiki-state-report.md
(+271 files in other folders)
